--- a/style.css
+++ b/style.css
@@ -16,9 +16,15 @@ main {
   background: white;
   margin-top: 60px;
   padding: 40px;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
+}
+
+section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 p {
@@ -61,13 +67,14 @@ button:hover {
 .sec-desc {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
 }
 
 .flexy-above {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
@@ -75,7 +82,7 @@ button:hover {
 * media query
 * -------------------------------------------- */
 
-@media (min-width: 1100px) {
+@media (min-width: 1220px) {
   main {
     display: flex;
     flex-direction: row-reverse;
@@ -90,6 +97,7 @@ button:hover {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: flex-start;
   }
 }
 
